Fixed backend navigation switch when hidden. (Made it visible)

--- a/app/styles/directives.scss
+++ b/app/styles/directives.scss
@@ -768,6 +768,7 @@ body {
 //*******bmm-navigator-backend*******//
 .bmm-navigator-backend.bmm-small {
   margin-left: -16em;
+  overflow: visible;
 }
 .bmm-navigator-backend {
   position: absolute;
